[metadata]
name = unopass
version = 0.0.16
author = Amado Tejada
author_email = tejada.amado@gmail.com
description = unopass is a simple to use 1Password CLI python module to retrieve secrets using your biometrics in local scripts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/amadotejada/unopass
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src