[metadata]
name = unopass
version = 0.0.21
author = Amado Tejada
author_email = tejada.amado@gmail.com
description = unopass is a convenient python module that allows you to retrieve secrets from the 1Password CLI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/amadotejada/unopass
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src